--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ numpy==1.24.4
 oauth2client==4.1.3
 oauthlib==3.2.2
 pandas==2.3.0
-# scikit-learn==1.6.1
+scikit-learn==1.6.1
 scikit-surprise==1.1.4
 # streamlit==1.45.1
 
